# django-react-template

./: .editorconfig  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  README.md  blue.py  coverage.ini  justfile  mkdocs.yml  package-lock.json  package.json  pyproject.toml
api/: managers.py  models.py
api/migrations/: 0001_initial.py
api/tests/: test_managers.py
apps/base/: adapter.py  admin.py  forms.py
apps/base/migrations/: 0001_initial.py
apps/base/tests/: test_managers.py  test_views.py
backend/: requirements.txt
backend/api/: managers.py  models.py
backend/api/migrations/: 0001_initial.py
backend/api/tests/: __init__.py  test_managers.py  test_views.py
backend/core/: context_processors.py  settings.py  urls.py
backend/requirements/: dev.in  prod.in
backend/templates/: index.html
core/: context_processors.py  settings.py  urls.py
docs/: auth-endpoints.md  index.md  website-launch-checklist.md
frontend/: .stylelintrc.json  package-lock.json  package.json
frontend/src/: App.tsx
requirements/: dev.in  dev_lock.txt  prod.in  prod_lock.txt
src/: App.css  App.tsx  agent.ts  main.tsx  store.ts
src/components/Logos/: Logos.tsx
src/components/Navbar/: Navbar.tsx
src/components/PrivateRoute/: PrivateRoute.tsx
src/config/: api.config.ts
src/pages/Home/: Home.tsx
src/pages/Login/: Login.tsx
src/pages/Profile/: Profile.css  Profile.tsx
src/services/: AuthService.ts  ProfileService.ts
src/stores/: AuthStore.ts
templates/: index.html
templates/account/email/: password_reset_key_message.txt
utils/: blue.py  clean.py  create_dotenv.py
