[project]
requires-python = ">=3.12"

[tool.djlint]
indent = 2
profile="django"
max_line_length=120
blank_line_after_tag="endblock,extends,load"
format_css=true
format_js=true
use_gitignore=true
ignore="H030,H031,H017"
exclude="base-email.html"

[tool.djlint.js]
indent_size=2

[tool.djlint.css]
indent_size=2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "S",  # bandit
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder", ]
